--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-7 col-md-4">
                 <a href="/" class="tm-bg-black text-center tm-logo-container">
-                    <i class="fas fa-camera tm-site-logo mb-3"></i>
-                    <h1 class="tm-site-name">PCAT</h1>
+                    <i class="fas fa-camera tm-site-logo"></i>
+                    <h1 class="tm-site-name">Photo Memories</h1>
                 </a>
             </div>
             <div class="col-5 col-md-8 ml-auto mr-0">
