edit page finished and work

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -35,9 +35,9 @@
 
                 <footer class="row pt-5">
                     <div class="col-12">
-                        <p class="text-right">Copyright 2020 The Video Catalog Company 
+                        <p class="text-right">Copyright 2020 The Catalog Company 
 
-                        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        - Designed by TemplateMo </p>
                     </div>
                 </footer>
             </div> <!-- tm-content-container -->
