--- a/public/css/templatemo-video-catalog.css
+++ b/public/css/templatemo-video-catalog.css
@@ -1,11 +1,3 @@
-/*
-
-TemplateMo 552 Video Catalog
-
-https://templatemo.com/tm-552-video-catalog
-
-*/
-
 html { scroll-behavior: smooth; overflow-x: hidden; }
 
 body {
@@ -40,12 +32,13 @@ h2, p { color: #666666; }
 
 .tm-logo-container {
     display: block;
-    padding: 30px;
-    width: 320px;
+    padding: 25px;
+    width: 300px;
     height: 160px;
+    border-radius: 100%;
 }
 
-.tm-site-logo { font-size: 3rem; }
+.tm-site-logo { font-size: 2.5rem; }
 .tm-site-name { font-size: 1.9rem; }
 
 #tm-video-container {
@@ -484,8 +477,8 @@ video {
     }
 
     .tm-logo-container {
-        height: 160px;
-        width: 250px;
+        height: 170px;
+        width: 200px;
     }
 
     .tm-site-header { padding: 20px; }
