--- a/public/css/templatemo-video-catalog.css
+++ b/public/css/templatemo-video-catalog.css
@@ -36,6 +36,7 @@ h2, p { color: #666666; }
     width: 300px;
     height: 160px;
     border-radius: 100%;
+    background-color:rgba(255, 255, 255, 0.082) !important;
 }
 
 .tm-site-logo { font-size: 2.5rem; }
@@ -159,7 +160,7 @@ h2, p { color: #666666; }
 
 .tm-btn-cta {
     color: white;
-    background-color: rgba(0,0,0,0.5);
+    background-color:rgba(255, 255, 255, 0.156) ;
 }
 
 .tm-btn-cta:before { font-size: 180%; }
@@ -479,6 +480,7 @@ video {
     .tm-logo-container {
         height: 170px;
         width: 200px;
+        background-color:red;
     }
 
     .tm-site-header { padding: 20px; }
