--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -34,7 +34,7 @@
 									<p class="mb-4">
 										<%= photo.description %>
 									</p>
-								</div> button
+								</div> 
 								<!-- Share box -->
 								<div class="tm-bg-gray tm-share-box">
 									<div class="text-center">
